Attempt to fix nav on mobile

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -205,16 +205,10 @@ input[type=submit]:hover {
   padding: 20px;
 }
 
-@media all and (max-width: 750px) {
+@media screen and (max-width: 760px) {
 	.navigation-list {
-		display: block;
-		float: none;
-	}
-	.navigation-list a {
-		width: auto;
-		min-width: 100px;
-		padding: 0 20px;
-	}
+		position: static;
+		display: non;
 }
 
 @media all and (max-width: 750px) {
